# NmeaParser

./: CMakeLists.txt  README.md  lv_conf.h
src/: GPS.cpp  GPS.h  Nmea.cpp  Nmea.h  main.cpp  mouse_cursor_icon.c  tty.cpp  tty.h  ui.cpp  ui.h
